objects/ccrz__E_RequestForQuote__c.object
<CustomObject>
    <fields>
        <fullName>Accept_or_Reject_Date__c</fullName>
        <label>Accept or Reject Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Amount_Per_Billing_Period__c</fullName>
        <description>Holds actual amount of product as per selected billing frequency</description>
        <label>Amount Per Billing Period</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Available_Subscription__c</fullName>
        <label>Available Subscription</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Base_URL__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_360, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_360))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Base URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Period__c</fullName>
        <formula>CC_SubProdTerm__r.Billing_Display_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCOrderItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CC Order Item</label>
        <referenceTo>ccrz__E_OrderItem__c</referenceTo>
        <relationshipLabel>CC Requests For Quote</relationshipLabel>
        <relationshipName>CC_Requests_For_Quote</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CC_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Use to keep product for which request being send</description>
        <label>CC Product</label>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipLabel>CC Requests For Quote</relationshipLabel>
        <relationshipName>CC_Requests_For_Quote</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CC_SubProdTerm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CC SubProdTerm</label>
        <referenceTo>ccrz__E_SubProdTerm__c</referenceTo>
        <relationshipLabel>CC Requests For Quote</relationshipLabel>
        <relationshipName>CC_Requests_For_Quote</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CompanyName__c</fullName>
        <formula>ccrz__Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Address__c</fullName>
        <formula>ccrz__Contact__r.Account.BillingStreet &amp; 
ccrz__Contact__r.Account.BillingCity &amp; &quot;, &quot; &amp; 
ccrz__Contact__r.Account.BillingState &amp; &quot; &quot; &amp; 
ccrz__Contact__r.Account.BillingPostalCode  &amp; 
ccrz__Contact__r.Account.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Subscription__c</fullName>
        <label>Cost/Subscription(Month)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Comments__c</fullName>
        <label>Customer Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <formula>ccrz__Contact__r.FirstName + ccrz__Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Status__c</fullName>
        <formula>if( (ISPICKVAL( Status__c , &apos;Requested&apos;) || ISPICKVAL( Status__c , &apos;In Progress&apos;) || ISPICKVAL( Status__c , &apos;Sent&apos;)  ) , &apos;In Progress&apos;, TEXT(Status__c))</formula>
        <label>Customer Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Discounted_Per_Billing_Frequency_Price__c</fullName>
        <formula>Amount_Per_Billing_Period__c - (Amount_Per_Billing_Period__c * Discounted_Percentage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discounted Per Billing Frequency Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discounted_Percentage__c</fullName>
        <label>Discounted Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discounted_Price__c</fullName>
        <label>Discounted Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Display_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Keep Package(Plan) of Main Product</description>
        <label>Product Name</label>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipLabel>CC Requests For Quote (Display Product)</relationshipLabel>
        <relationshipName>CC_Requests_For_Quote1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <formula>ccrz__Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expired_Date__c</fullName>
        <label>Expired Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Final_Price__c</fullName>
        <label>Final Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_of_Days_Expired__c</fullName>
        <formula>NOW() - Expired_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Days Expired</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OSM_CommunityUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Hold User id who creates Quote</description>
        <label>OSM_CommunityUser</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CC_Requests_For_Quote</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OSM_Discounted_Total_Price__c</fullName>
        <formula>IF((Discounted_Price__c &gt;=0 &amp;&amp; ccrz__Amount__c &gt;0 &amp;&amp; Cost_Subscription__c &gt;0),((Cost_Subscription__c-Discounted_Price__c) * ccrz__Amount__c/Cost_Subscription__c),0)</formula>
        <label>OSM Discounted Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OSM_RFQ_After24Hrs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OSM_RFQ_After24Hrs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSM_Sales_Admin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OSM Sales Admin</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CC_Requests_For_Quote3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <label>Operation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Send</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>InActive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <formula>ccrz__Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Plan__c</fullName>
        <label>Package</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_Requested_By_SupportAdmin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Requested By SupportAdmin</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CC_Requests_For_Quote4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_Requested_Date__c</fullName>
        <label>Quote Requested Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Quote_Sent_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Sent By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CC_Requests_For_Quote1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_User_Comments__c</fullName>
        <label>Sales User Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sales_User_Internal_Comments__c</fullName>
        <label>Sales User Internal Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>InActive</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                    <isActive>false</isActive>
                    <label>New</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscription_Length_Number__c</fullName>
        <formula>CC_SubProdTerm__r.Subs_Length_Sequence__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscription Length Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subscription_Length__c</fullName>
        <formula>CC_SubProdTerm__r.ccrz__DisplayName__c</formula>
        <label>Subscription Length</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CC Requests For Quote</relationshipLabel>
        <relationshipName>CC_Requests_For_Quote</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__Cart__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CC Cart</label>
        <referenceTo>ccrz__E_Cart__c</referenceTo>
        <relationshipName>Requests_For_Quote</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__CloseDate__c</fullName>
        <label>CloseDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccrz__Company__c</fullName>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Requests_For_Quote</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ccrz__FirstName__c</fullName>
        <label>FirstName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__HasOptedOutOfEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__LastName__c</fullName>
        <label>LastName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__LeadSource__c</fullName>
        <label>Lead Source</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__LeadStatus__c</fullName>
        <label>LeadStatus</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__NextStep__c</fullName>
        <label>Next Step</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__OpportunityName__c</fullName>
        <label>Opportunity Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__OpportunityType__c</fullName>
        <label>Opportunity Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ccrz__StageName__c</fullName>
        <label>Stage Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Storefront__c</fullName>
        <label>Storefront</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <label>CC Request For Quote</label>
    <listViews>
        <fullName>Expired_Quotes</fullName>
        <columns>NAME</columns>
        <columns>Quote_Requested_Date__c</columns>
        <columns>ccrz__Account__c</columns>
        <columns>CC_Product__c</columns>
        <columns>Cost_Subscription__c</columns>
        <columns>Discounted_Price__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Expired</value>
        </filters>
        <label>Expired Quotes</label>
        <language>en_US</language>
        <sharedTo>
            <group>OSM_Business_Admin_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>InActive_Quotes</fullName>
        <columns>NAME</columns>
        <columns>ccrz__Account__c</columns>
        <columns>CC_Product__c</columns>
        <columns>Cost_Subscription__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>InActive</value>
        </filters>
        <label>InActive Quotes</label>
        <language>en_US</language>
        <sharedTo>
            <group>OSM_Business_Admin_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>In_Progress_Quotes</fullName>
        <columns>NAME</columns>
        <columns>ccrz__Account__c</columns>
        <columns>Quote_Requested_Date__c</columns>
        <columns>CC_Product__c</columns>
        <columns>Discounted_Price__c</columns>
        <columns>Discounted_Percentage__c</columns>
        <columns>Cost_Subscription__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>In Progress Quotes</label>
        <language>en_US</language>
        <sharedTo>
            <group>OSM_Business_Admin_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Rejected_Quotes</fullName>
        <columns>NAME</columns>
        <columns>ccrz__Account__c</columns>
        <columns>Quote_Requested_Date__c</columns>
        <columns>Cost_Subscription__c</columns>
        <columns>CC_Product__c</columns>
        <columns>Discounted_Percentage__c</columns>
        <columns>Discounted_Price__c</columns>
        <columns>Accept_or_Reject_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <label>Rejected Quotes</label>
        <language>en_US</language>
        <sharedTo>
            <group>OSM_Business_Admin_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Requested_Quotes</fullName>
        <columns>NAME</columns>
        <columns>Quote_Requested_Date__c</columns>
        <columns>ccrz__Account__c</columns>
        <columns>CC_Product__c</columns>
        <columns>Cost_Subscription__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Requested</value>
        </filters>
        <label>Requested Quotes</label>
        <language>en_US</language>
        <sharedTo>
            <group>OSM_Business_Admin_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Sent_Quotes</fullName>
        <columns>NAME</columns>
        <columns>Quote_Requested_Date__c</columns>
        <columns>ccrz__Account__c</columns>
        <columns>CC_Product__c</columns>
        <columns>Discounted_Percentage__c</columns>
        <columns>Discounted_Price__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Sent</value>
        </filters>
        <label>Sent Quotes</label>
        <language>en_US</language>
        <sharedTo>
            <group>OSM_Business_Admin_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ccrz__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RFQ-{000000}</displayFormat>
        <label>RFQ Auto Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Requests For Quote</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>